--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,9 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:' + rootProject.ext.retrofitVersion
     compile 'com.squareup.retrofit2:converter-gson:' + rootProject.ext.retrofitVersion
-    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'io.reactivex.rxjava2:rxjava:' + rootProject.ext.rxJavaVersion
+    compile 'io.reactivex.rxjava2:rxandroid:' + rootProject.ext.rxAndroidVersion
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:' + rootProject.ext.rxAdapterRetrofitVersion
     compile 'com.google.dagger:dagger:' + rootProject.ext.daggerVersion
     annotationProcessor 'com.google.dagger:dagger-compiler:' + rootProject.ext.daggerVersion
     compile "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
