--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,9 @@ task clean(type: Delete) {
 
 ext {
 
-    rxAndroidVersion = '1.2.1'
-    rxJavaVersion = '1.2.0'
+    rxAndroidVersion = '2.0.1'
+    rxJavaVersion = '2.1.9'
+    rxAdapterRetrofitVersion = '1.0.0'
     daggerVersion = '2.11'
     gsonVersion = '2.8.0'
     retrofitVersion = '2.1.0'
